--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,12 @@ script:
   - go test -v ./...
   # Build the code 
   - env GOOS=linux GOARCH=amd64 go build -o demo
+  - echo "$REGISTRY_PASSWORD" | docker login --username $REGISTRY_USER --password-stdin
+  - docker build -f Dockerfile -t $REGISTRY_USER/demo:latest ./
+  - GIT_SHA="$(git rev-parse --short HEAD)"
+  - docker tag $REGISTRY_USER/demo:latest $REGISTRY_USER/demo:$GIT_SHA
+  - docker push $REGISTRY_USER/demo:latest
+ - docker push $REGISTRY_USER/demo:$GIT_SHA
+
+services:
+- docker
