--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ go:
 script:   
   # Test the code
   - go test -v ./...
+  - CGO_ENABLED=0 go build -o demo
   # Build the code 
-  - env GOOS=linux GOARCH=amd64 go build -o demo
   - echo "$REGISTRY_PASSWORD" | docker login --username $REGISTRY_USER --password-stdin
   - docker build -f Dockerfile -t $REGISTRY_USER/demo:latest ./
   - GIT_SHA="$(git rev-parse --short HEAD)"
